# lab3

./: CMakeLists.txt  main.cpp
inlcude/: Figure.h  Rectangle.h  Square.h  Trapezoid.h
src/: Figure.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp
test/: test.cpp
